# kaax-ai

./: .dockerignore  .gitignore  DAILY_DEV_WORK.md  Makefile  README.md  TODO.md  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  builder.py  event_mapper.py  factory.py  intent_router.py  intent_router_llm.py  langchain_runtime.py  lead_capture.py  memory_intent_graph.py  orchestration_runtime.py  prompt_loader.py  result_parser.py  runtime.py
app/agent/middleware/: __init__.py  prompt_sanitizer.py  summarization.py
app/agent/orchestration/: __init__.py  capture_utils.py  graph.py  helpers.py  nodes.py  routing_rules.py  schemas.py  subagents.py
app/agent/tools/: __init__.py  capture_lead_if_ready_tool.py  context.py  contracts.py  crm_upsert_quote_tool.py  detect_lead_capture_readiness_tool.py  knowledge_learn_tool.py  knowledge_search_tool.py  (+3 more)
app/api/: auth.py  dependencies.py  main.py  sse.py
app/channels/: normalization.py
app/crm/: __init__.py  providers.py
app/infra/: db.py  models.py  redis.py  settings.py
app/knowledge/: __init__.py  providers.py
app/memory/: attachments_store.py  checkpoint_store.py  cleanup.py  idempotency.py  langgraph_checkpointer.py  locks.py  session_manager.py
app/observability/: elastic.py  logging.py  metrics.py  sentry.py
app/prompts/: agent.yaml  agent_core_capture.yaml  agent_greeting.yaml  agent_inventory.yaml  agent_knowledge.yaml  agent_sales_dialogue.yaml  intent_router.yaml  knowledge_learn_detector.yaml  memory_intent_router.yaml  supervisor.yaml
infra/cdk/: README.md
migrations/: env.py
(+69 files in other folders)
