[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaax-ai"
version = "0.1.0"
description = "FastAPI agent scaffold with sync/stream assist endpoints"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.31.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]
migrations = [
  "alembic>=1.13.0,<2.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
]
postgres = [
  "asyncpg>=0.30.0,<1.0.0",
]
redis = [
  "redis>=5.2.0,<6.0.0",
]
bedrock = [
  "langchain==1.0.7",
  "langgraph==1.0.3",
  "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
  "langchain-aws>=1.0.0,<2.0.0",
  "boto3>=1.34.0,<2.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
]
chainlit = [
  "chainlit>=2.0.0,<3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
